welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: method posfin has return statement; needs result type
			return true
                        ^SnakeBuggle:12: error: method posfin has return statement; needs result type
				return true
                                ^SnakeBuggle:18: error: method posfin has return statement; needs result type
				return true
                                ^SnakeBuggle:19: error: method posfin has return statement; needs result type
		} else return false
                       ^